v1完善了提交博客接口

--- a/backend/项目结构设计.md
+++ b/backend/项目结构设计.md
@@ -15,3 +15,24 @@
   - pkg用于放置一些能被复用的模块，例如构建实例的相关代码，在这里配置结构体和加载配置的函数，以及创建实例的方法，例如连接mysql使用到的gorm，还有和阿里云OSS一系列的操作
   - model是定义一系列结构体的地方，table文件夹中的模型是mysql数据库表的映射，request和response定义了和请求、响应有关的统一数据结构
   - middleware是存放中间件逻辑的地方，例如令牌认证
+
+
+
+# 后端说明：
+
+进行本项目的后端编写，需要了解：
+
+- 编写接口的工具swagger，使用了go的swaggo SDK，参考文档：[swag/README_zh-CN.md at master · swaggo/swag](https://github.com/swaggo/swag/blob/master/README_zh-CN.md)
+- Web框架gin的基本使用，参考文档：[Gin框架介绍及使用 | 李文周的博客](https://www.liwenzhou.com/posts/Go/gin/#c-0-5-1)
+- gorm的增删查改基本使用，参考文档：[创建 | GORM - The fantastic ORM library for Golang, aims to be developer friendly.](https://gorm.io/zh_CN/docs/create.html)
+- 若编写的接口涉及到阿里云OSS，请参考官方SDK：[Go_对象存储(OSS)-阿里云帮助中心](https://help.aliyun.com/zh/oss/developer-reference/go/?spm=a2c4g.11186623.0.0.59145ecfQaUL4h)
+
+数据库的可视化工具推荐使用Navicat，可以通过该链接下载破解版https://www.alipan.com/s/mZjspLe1VMb
+
+若要测试项目，需要先将pkg-oss下的init函数更换其函数名，因为init函数需要初始化对oss的连接，还没有分配好授权是连接不上的
+
+使用vscode编写go的推荐下载git graph查看分支，每次push到github需要先合并当前项目最新版本的文件，再push到github，若有冲突需要手动更改。在每次的注释最好说明当前版本号为第几，完善了什么内容
+
+编写每一个接口尽可能的写好代码注释，有问题在群里讨论，接口位于controller中，响应统一使用response包下的方法
+
+每次写好了接口需要去router文件夹注册路由，如果修改了接口文档需要使用swag init去更新，访问接口文档的方法为跑起main函数然后访问localhost:8080/swagger/index.html进行查看，对每个接口使用Try it可以进行接口测试，如果需要对/api路由的接口进行测试，需要填写文档右侧的Authorize，输入文档开头用于测试用的token
