重写了OSS SDK的工具包

--- a/backend/项目结构设计.md
+++ b/backend/项目结构设计.md
@@ -25,7 +25,7 @@
 - 编写接口的工具swagger，使用了go的swaggo SDK，参考文档：[swag/README_zh-CN.md at master · swaggo/swag](https://github.com/swaggo/swag/blob/master/README_zh-CN.md)
 - Web框架gin的基本使用，参考文档：[Gin框架介绍及使用 | 李文周的博客](https://www.liwenzhou.com/posts/Go/gin/#c-0-5-1)
 - gorm的增删查改基本使用，参考文档：[创建 | GORM - The fantastic ORM library for Golang, aims to be developer friendly.](https://gorm.io/zh_CN/docs/create.html)
-- 若编写的接口涉及到阿里云OSS，请参考官方SDK：[Go_对象存储(OSS)-阿里云帮助中心](https://help.aliyun.com/zh/oss/developer-reference/go/?spm=a2c4g.11186623.0.0.59145ecfQaUL4h)
+- 若编写的接口涉及到阿里云OSS，请参考官方SDK：[Go_对象存储(OSS)-阿里云帮助中心](https://github.com/aliyun/alibabacloud-oss-go-sdk-v2/blob/master/README-CN.md)
 
 数据库的可视化工具推荐使用Navicat，可以通过该链接下载破解版https://www.alipan.com/s/mZjspLe1VMb
 
